--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,38 +123,13 @@
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
   --gradient-red-hover: linear-gradient(145deg, #ff014f, #d11414);
-  --color-heading: #ffffff;
-  --color-heading-wv: #1e2125;
-  --color-body: #878e99;
-  --color-body-white: #3c3e41;
-  --color-lightn: #c4cfde;
-  --color-midgray: #878787;
-  --color-light: #e4e6ea;
-  --color-lighter: #ced0d4;
-  --color-lightest: #f0f2f5;
-  --color-border: #e6e6e6;
-  --color-white: #ffffff;
-  --color-white-75: rgba(255, 255, 255, 0.75);
-  --color-success: #3eb75e;
-  --color-danger: #ff0003;
-  --color-warning: #ff8f3c;
-  --color-info: #1ba2db;
-  --color-facebook: #3b5997;
-  --color-twitter: #1ba1f2;
-  --color-youtube: #ed4141;
-  --color-linkedin: #0077b5;
-  --color-pinterest: #e60022;
-  --color-instagram: #c231a1;
-  --color-vimeo: #00adef;
-  --color-twitch: #6441a3;
-  --color-discord: #7289da;
 }
 [color-theme=blue] {
-  --color-primary: #ff014f;
+  --color-primary: #2196f3;
   --color-secondary: #f4f5f6;
   --color-tertiary: #0d1013;
   --color-gray: #f6f6f6;
-  --color-subtitle: #f9004d;
+  --color-subtitle: #2962ff;
   --background-color-1: linear-gradient(145deg, #1e2024, #23272b);
   --background-color-2: #212428;
   --shadow-1: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
@@ -163,34 +138,9 @@
     -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
-  --gradient-red-hover: linear-gradient(145deg, #ff014f, #d11414);
-  --color-heading: #ffffff;
-  --color-heading-wv: #1e2125;
-  --color-body: #878e99;
-  --color-body-white: #3c3e41;
-  --color-lightn: #c4cfde;
-  --color-midgray: #878787;
-  --color-light: #e4e6ea;
-  --color-lighter: #ced0d4;
-  --color-lightest: #f0f2f5;
-  --color-border: #e6e6e6;
-  --color-white: #ffffff;
-  --color-white-75: rgba(255, 255, 255, 0.75);
-  --color-success: #3eb75e;
-  --color-danger: #ff0003;
-  --color-warning: #ff8f3c;
-  --color-info: #1ba2db;
-  --color-facebook: #3b5997;
-  --color-twitter: #1ba1f2;
-  --color-youtube: #ed4141;
-  --color-linkedin: #0077b5;
-  --color-pinterest: #e60022;
-  --color-instagram: #c231a1;
-  --color-vimeo: #00adef;
-  --color-twitch: #6441a3;
-  --color-discord: #7289da;
+  --gradient-red-hover: linear-gradient(145deg, #448aff, #2979ff);
+  --color-github: #171515; 
 }
-
 * {
   box-sizing: border-box;
 }
