--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@
   --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset,
     -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
-  --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
+  --shadow: linear-gradient(145deg, #1e2024, #23272b);
+  --gradient-box-w: linear-gradient(145deg, #272727, #303030);
   --gradient-red-hover: linear-gradient(145deg, #ff014f, #d11414);
   --color-heading: #ffffff;
   --color-heading-wv: #1e2125;
@@ -121,6 +122,7 @@
   --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset,
     -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+  --shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
   --gradient-red-hover: linear-gradient(145deg, #ff014f, #d11414);
   --color-heading: #1e2125;
@@ -139,6 +141,7 @@
   --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset,
     -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+  --shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
   --gradient-red-hover: linear-gradient(145deg, #448aff, #2979ff);
   --color-github: #171515; 
@@ -20239,5 +20242,19 @@ body.white-version {
     -webkit-transform: scale(1, 1);
     opacity: 0;
   }
+}
+.my-featured{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.my-featured .feature-item{
+  background: var(--gradient-box-w);
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-size: 13px;
+  border: 1px solid var(--color-primary);
+  color: var(--color-heading);
+  box-shadow: var(--shadow);
 }
 /*# sourceMappingURL=../maps/style.css.map */
