--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@
     -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --shadow: linear-gradient(145deg, #1e2024, #23272b);
-  --gradient-box-w: linear-gradient(145deg, #272727, #303030);
+  --gradient-box-w: linear-gradient(145deg, #1d1d1d3b, #30303046);
   --gradient-red-hover: linear-gradient(145deg, #ff014f, #d11414);
   --color-heading: #ffffff;
   --color-heading-wv: #1e2125;
